public/css/style.css
/* ... */
.container{
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: 16px;
  padding-left: 16px;
}

@media (min-width: 640px){
  .container{
    max-width: 640px;
  }
}

@media (min-width: 768px){
  .container{
    max-width: 768px;
  }
}

@media (min-width: 1024px){
  .container{
    max-width: 1024px;
  }
}

@media (min-width: 1280px){
  .container{
    max-width: 1280px;
  }
}

@media (min-width: 1320px){
  .container{
    max-width: 1320px;
  }
}

.bug {
  padding-top: 2rem;
}

.card{
  margin-top: 0.5rem;
  height: 16rem;
  width: 9rem;
  border-radius: 0.375rem;
  --tw-bg-opacity: 1;
  background-color: rgb(234 234 234 / var(--tw-bg-opacity));
  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

@media (min-width: 768px){
  .card{
    height: 20rem;
    width: 12rem;
  }
}

.card-image{
  height: 13rem;
  width: 100%;
  overflow: hidden;
  border-top-left-radius: 0.375rem;
  border-top-right-radius: 0.375rem;
  --tw-bg-opacity: 1;
  background-color: rgb(101 125 247 / var(--tw-bg-opacity));
}

@media (min-width: 768px){
  .card-image{
    height: 16rem;
  }
}

.collapse{
  visibility: collapse;
}

.static{
  position: static;
}

.absolute{
  position: absolute;
}

.relative{
  position: relative;
}

.left-2{
  left: 0.5rem;
}

.top-6{
  top: 1.5rem;
}

.-z-10{
  z-index: -10;
}

.z-10{
  z-index: 10;
}

.-mt-4{
  margin-top: -1rem;
}

.mb-2{
  margin-bottom: 0.5rem;
}

.mb-4{
  margin-bottom: 1rem;
}

.mt-2{
  margin-top: 0.5rem;
}

.flex{
  display: flex;
}

.grid{
  display: grid;
}

.hidden{
  display: none;
}

.h-20{
  height: 5rem;
}

.h-24{
  height: 6rem;
}

.h-40{
  height: 10rem;
}

.h-6{
  height: 1.5rem;
}

.h-\[10rem\]{
  height: 10rem;
}

.h-\[2rem\]{
  height: 2rem;
}

.h-full{
  height: 100%;
}

.w-12{
  width: 3rem;
}

.w-32{
  width: 8rem;
}

.w-6{
  width: 1.5rem;
}

.w-\[12rem\]{
  width: 12rem;
}

.w-\[2rem\]{
  width: 2rem;
}

.w-\[40rem\]{
  width: 40rem;
}

.w-\[6rem\]{
  width: 6rem;
}

.w-\[70\%\]{
  width: 70%;
}

.w-full{
  width: 100%;
}

.flex-1{
  flex: 1 1 0%;
}

.shrink-0{
  flex-shrink: 0;
}

.rotate-180{
  --tw-rotate: 180deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.list-disc{
  list-style-type: disc;
}

.grid-cols-4{
  grid-template-columns: repeat(4, minmax(0, 1fr));
}

.flex-col{
  flex-direction: column;
}

.flex-wrap{
  flex-wrap: wrap;
}

.items-center{
  align-items: center;
}

.justify-center{
  justify-content: center;
}

.justify-between{
  justify-content: space-between;
}

.gap-1{
  gap: 0.25rem;
}

.gap-2{
  gap: 0.5rem;
}

.gap-4{
  gap: 1rem;
}

.self-end{
  align-self: flex-end;
}

.overflow-hidden{
  overflow: hidden;
}

.whitespace-nowrap{
  white-space: nowrap;
}

.rounded-2xl{
  border-radius: 1rem;
}

.rounded-full{
  border-radius: 9999px;
}

.rounded-md{
  border-radius: 0.375rem;
}

.rounded-b-md{
  border-bottom-right-radius: 0.375rem;
  border-bottom-left-radius: 0.375rem;
}

.rounded-t-md{
  border-top-left-radius: 0.375rem;
  border-top-right-radius: 0.375rem;
}

.border{
  border-width: 1px;
}

.border-2{
  border-width: 2px;
}

.border-b-0{
  border-bottom-width: 0px;
}

.border-t-0{
  border-top-width: 0px;
}

.border-gray-200{
  --tw-border-opacity: 1;
  border-color: rgb(229 231 235 / var(--tw-border-opacity));
}

.border-gray-400{
  --tw-border-opacity: 1;
  border-color: rgb(156 163 175 / var(--tw-border-opacity));
}

.border-primary{
  --tw-border-opacity: 1;
  border-color: rgb(41 41 41 / var(--tw-border-opacity));
}

.border-secondaryBlue{
  --tw-border-opacity: 1;
  border-color: rgb(101 125 247 / var(--tw-border-opacity));
}

.border-secondaryDark{
  --tw-border-opacity: 1;
  border-color: rgb(71 71 71 / var(--tw-border-opacity));
}

.border-text{
  --tw-border-opacity: 1;
  border-color: rgb(255 255 255 / var(--tw-border-opacity));
}

.bg-backgroundColor{
  --tw-bg-opacity: 1;
  background-color: rgb(245 246 251 / var(--tw-bg-opacity));
}

.bg-backgroundFooter{
  --tw-bg-opacity: 1;
  background-color: rgb(6 22 91 / var(--tw-bg-opacity));
}

.bg-primary{
  --tw-bg-opacity: 1;
  background-color: rgb(41 41 41 / var(--tw-bg-opacity));
}

.bg-secondaryBlue{
  --tw-bg-opacity: 1;
  background-color: rgb(101 125 247 / var(--tw-bg-opacity));
}

.bg-text{
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}

.bg-transparent{
  background-color: transparent;
}

.bg-white{
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}

.object-cover{
  -o-object-fit: cover;
     object-fit: cover;
}

.p-5{
  padding: 1.25rem;
}

.px-3{
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

.px-32{
  padding-left: 8rem;
  padding-right: 8rem;
}

.px-4{
  padding-left: 1rem;
  padding-right: 1rem;
}

.px-6{
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.py-1{
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

.py-2{
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.py-4{
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.py-8{
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.pb-10{
  padding-bottom: 2.5rem;
}

.pb-2{
  padding-bottom: 0.5rem;
}

.pb-4{
  padding-bottom: 1rem;
}

.pb-8{
  padding-bottom: 2rem;
}

.pt-2{
  padding-top: 0.5rem;
}

.pt-24{
  padding-top: 6rem;
}

.pt-4{
  padding-top: 1rem;
}

.pt-8{
  padding-top: 2rem;
}

.text-left{
  text-align: left;
}

.text-center{
  text-align: center;
}

.text-justify{
  text-align: justify;
}

.text-2xl{
  font-size: 1.5rem;
  line-height: 2rem;
}

.text-3xl{
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.text-4xl{
  font-size: 2.25rem;
  line-height: 2.5rem;
}
/* ... */

